# EMRA

./: README.md  blood_report.txt  casualties.csv  casualty_list.txt  casualty_report.txt  challenges.txt  clean_challenges.txt  ex.optimized.output  ex.output  healthcare_report.txt  main.py  messenger.py  output.txt  qLearningFromInputValues.py  qlearningAgent.py
ForMultiAgent/: README.md  pyproject.toml  report.md
ForMultiAgent/src/edu2/: crew.py  main.py
ForMultiAgent/src/edu2/config/: agents.yaml  tasks.yaml
