[project]
name = "edu2"
version = "0.1.0"
description = "edu2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
edu2 = "edu2.main:run"
run_crew = "edu2.main:run"
train = "edu2.main:train"
replay = "edu2.main:replay"
test = "edu2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
